# logwatcher

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  cli.rs  event.rs  file_tracker.rs  llm.rs  main.rs  tail_reader.rs  tui.rs  ui.rs
