[package]
name = "logwather"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
notify = "7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
glob-match = "0.2"

[dev-dependencies]
tempfile = "3"
